# artriculate

./: .gitignore  .gitmodules  ArtDelegate.qml  CMakeLists.txt  Gravity.qml  HorizontalArtDelegate.qml  ImageBoxBody.qml  README  README.md  VerticalArtDelegate.qml  art  artriculate  artriculate.pro  main.cpp  main.qml  metadata.desktop  picturemodel.cpp  picturemodel.h  qml.qrc
qml/: ArtDelegate.qml  CMakeLists.txt  Gravity.qml  HorizontalArtDelegate.qml  Ticker.qml  VisualEffect.qml  main.qml  qml.pro  qml.qrc  qmldir
qml/basic/: Basic.qml
qml/cascade/: Cascade.qml  CascadeDelegate.qml
qml/common/: ArtImage.qml  FullSizedArtImage.qml  View.qml  VisualEffect.qml
qml/conveyor/: Conveyor.qml
qml/effects/: Billboard.qml  Effect.qml  Emboss.qml  qmldir
qml/physics/: ArtBoxBody.qml  ArtDelegate.qml  HorizontalArtDelegate.qml  ImageBoxBody.qml  Physics.qml  RectangleBoxBody.qml
qml/procession/: Procession.qml
qml/reel/: Reel.qml  ReelImage.qml
qml/simplelistview/: SimpleListView.qml
qml/unlicensed/: Unlicensed.qml
qml/views/animator/: Animator.qml
qml/views/basic/: Basic.qml
qml/views/cascade/: Cascade.qml  CascadeDelegate.qml
qml/views/conveyor/: Conveyor.qml
qml/views/procession/: Procession.qml  ProcessionImage.qml
qml/views/reel/: Reel.qml  ReelImage.qml
qml/views/simplelistview/: SimpleListView.qml
qml/views/trivial/: Trivial.qml
qml/views/well/: Well.qml  WellDelegate.qml
qml/well/: Well.qml  WellDelegate.qml
qml/widget/: FPSMonitor.qml
qml/widgets/: Clock.qml  CollectionSize.qml  FPS.qml  InfoTray.qml  ItemCount.qml  RebootReq.qml  Resolution.qml  Widget.qml  WidgetTray.qml
resources/: artriculate.desktop  artriculate@.service  pi-launcher@.service  resources.qrc
resources/shaders/: billboard.fsh  gaussianblur_h.fsh  gaussianblur_v.fsh
src/: filereader.h  helperfunctions.cpp  helperfunctions.h  main.cpp  picturemodel.cpp  picturemodel.h  src.pro
src/resources/: README  artriculate.service  artriculate@.service  kms-screen.json  license-header  resources.qrc
src/resources/buuf/: origin
